# free-company

./: .gitignore  Makefile  README.md  mcp-launcher.bat  pyproject.toml  requirements.txt  unreal_mcp_server.py
Config/: DefaultEngine.ini  DefaultInput.ini
Content/Blueprints/: BP_FCGameMode.uasset  BP_FirstPersonCharacter.uasset
Content/Maps/: TestLevel.umap
Docs/: DESIGN.md  abilities_system.md  character_system.md  combat_mechanics.md  design.txt  effects_system.md  enemy_boss_design.md  experimental_systems.md  level_design.md  phase1_implementation.md  settlement_building.md
Plugins/UnrealMCP/Config/: DefaultMCP.ini
Python/: README.md  pyproject.toml  start_server.bat
Python/mcp_venv/: pyvenv.cfg
Python/mcp_venv/Scripts/: activate  activate.bat
Python/scripts/: README.md  create_game_mode.py  first_person_controller.py  phase1_implementation.py  project_setup.py
Python/server/: __main__.py  constants.py  core.py
Python/server/tools/: actor_tools.py  blueprint_tools.py  editor_tools.py  node_tools.py
Source/MCPGameProject/: MCPGameProject.Build.cs
mcp/: Makefile  README.md  __init__.py  __main__.py  config.py  mcp.bat  mcp_config.json  mcp_utils.py  registry.py  server.py  setup_project.py
mcp/scripts/actors/: __init__.py  (+1 more)
scripts/: create_character.py  create_test_level.py  create_torch.py  mcp_commands.md  setup_character_blueprint.py  setup_character_input.py  setup_character_mesh.py  setup_game_mode.py  setup_input_mappings.py  unreal_mcp_server.py
scripts/blueprints/: setup_character_blueprint.py
scripts/core/: unreal_mcp_server.py
scripts/game/: setup_game_mode.py
scripts/input/: setup_character_input.py
tools/: actor_tools.py  blueprint_tools.py  editor_tools.py  node_tools.py
(+33 files in other folders)
